--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -60,10 +60,10 @@ html, body {
     flex-direction: column;
     min-height: 100vh;
 }
+
 /* Content on other html */
 .content-wrapper {
     flex: 1;
-    /* Add padding or margin as needed */
 }
 
 /* Footer */
@@ -112,6 +112,12 @@ footer {
 
 #homeContainer {
     overflow: hidden;
+}
+
+
+/* About us section */
+#aboutUs {
+    padding-bottom: 30px;
 }
 
 
