--- a/browse/templates/browse/read_book.html
+++ b/browse/templates/browse/read_book.html
@@ -3,19 +3,24 @@
 
 
 <div class="container-md">
-    <div class="book-container ">
-        <div id="bookContent">
-            {% for chapter in chapters %}
-                <div class="chapter text-center" id="chapter-{{ forloop.counter0 }}" >
-                    <h2>{{ chapter.chapter | safe }}</h2>
-                    <p>{{ chapter.content | safe }}</p>
+    <div class="d-flex book-container justify-content-md-center">
+        <div class="d-flex row justify-content-center">
+            <div class="col-sm col-md-8 col-lg-8">
+                <div id="bookContent">
+                    {% for chapter in chapters %}
+                        <div class="chapter text-center" id="chapter-{{ forloop.counter0 }}" >
+                            <h2>{{ chapter.chapter | safe }}</h2>
+                            <p>{{ chapter.content | safe }}</p>
+                        </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+                <div class="d-flex justify-content-center mt-3">
+                    <button id="prevChapter" class="btn btn-secondary me-2">Previous Chapter</button>
+                    <button id="nextChapter" class="btn btn-secondary ms-2">Next Chapter</button>
+                </div>
+            </div>
         </div>
-        <div class="d-flex justify-content-center mt-3">
-            <button id="prevChapter" class="btn btn-secondary me-2">Previous Chapter</button>
-            <button id="nextChapter" class="btn btn-secondary ms-2">Next Chapter</button>
-        </div>
+        
     </div>
 </div>
 
