--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,14 @@ html, body {
     margin: 0;
 }
 
+/* navbar */
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
+}
+
+
 /* All of the content wrapper */
 .body-wrapper {
     display: flex;
@@ -68,6 +76,7 @@ html, body {
 
 /* Footer */
 footer {
+    position: sticky;
     width: 100%;
     height: auto;
 }
@@ -155,12 +164,12 @@ footer {
 .book-container {
     border: 5px solid #d8d6d6dd;
     border-radius: 25px;
-    margin: 10px;
+    margin: 0;
     position: absolute;
-    top: 30%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
+    padding: 0;
 }
 
 #bookContent {
