--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
   <div class="body-wrapper">
       <nav class="navbar navbar-expand-lg" style="background-color: #f1e7c1ea;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Inkpad</a>
+          <a class="navbar-brand" href="{{ home_url }}">Inkpad</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
