--- a/browse/templates/browse/view_chapter.html
+++ b/browse/templates/browse/view_chapter.html
@@ -27,9 +27,9 @@
           {% empty %}
           <p>No chapters found for this book.</p>
           {% endfor %}
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center row-cols-md-4">
             {% if user.is_authenticated %}
-              <div class="col-md-3">
+              <div class="col-md-3 col-lg-2">
                 {% if book.author == request.user %}
                     <a href="{% url 'add_chapter' book.slug %}" class="btn btn-secondary">Add a chapter</a>
                 {% endif %}
