--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -54,6 +54,14 @@ html, body {
     margin: 0;
 }
 
+/* navbar */
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
+}
+
+
 /* All of the content wrapper */
 .body-wrapper {
     display: flex;
@@ -68,6 +76,7 @@ html, body {
 
 /* Footer */
 footer {
+    position: sticky;
     width: 100%;
     height: auto;
 }
@@ -79,6 +88,11 @@ footer {
 .homepage-container{
     height: auto;
     max-width: 100%;
+    
+}
+
+.homepage-container img {
+    padding-right: 25px;
 }
 
 .banner-card{
@@ -120,7 +134,11 @@ footer {
     padding-bottom: 30px;
 }
 
+/* quotes */
 
+#quotes {
+    margin: 0px 35px 0px 1px;
+}
 
 /* ------ Browse -------- */
 
@@ -146,12 +164,12 @@ footer {
 .book-container {
     border: 5px solid #d8d6d6dd;
     border-radius: 25px;
-    margin: 10px;
+    margin: 0;
     position: absolute;
-    top: 30%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
+    padding: 0;
 }
 
 #bookContent {
@@ -178,8 +196,7 @@ footer {
 /* Log in page */
 
 #login {
-    left: 350px;
-    top: 40px;
+    width: 100%;
 }
 
 
@@ -196,3 +213,36 @@ footer {
     top: 120px;
 }
 
+
+/* ------------ Profile ------- */
+
+/* Carousel */
+
+.carousel-control-next,
+.carousel-control-prev {
+    background-color: #e1e1e1;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+/* @media (max-width: 550px) {
+    .custom-profile {
+        flex-basis: 50%;
+        width: 100%; 
+    }
+
+    .card-profile {
+        height: 75%;
+    }
+    
+}  */
+
+/* Ensures the card body doesn't stretch too much */
+.card-body {
+    overflow-y: auto;
+    height: 50%;
+}
