--- a/templates/base.html
+++ b/templates/base.html
@@ -125,9 +125,14 @@
       </footer>
 
       <!-- Javascript -->
+            <!-- Block for additional scripts -->
+        {% block additional_scripts %}
+        {% endblock %}
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
       <script src="{% static 'js/script.js' %}"></script>
      
 
