--- a/browse/templates/browse/book_view.html
+++ b/browse/templates/browse/book_view.html
@@ -6,7 +6,7 @@
         <div class="col-sm-6">
             <div class="card text-center" >
                 <div class="card-header" >
-                    <img src="{{ book_view.image.url }}" alt="{{ book_view.title }}" id="img-size"/>
+                    <img src="{{ book_view.image.url }}" alt="{{ book_view.title }}" id="img-size">
                 </div>
                 <div class="card-body">
                     <h3>{{ book_view.title | safe }}</h3>
