--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -41,19 +41,16 @@
       <li class="page-item">
         {% if page_obj.has_previous %}
           <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo;</a>
-      {% endif %}
+        {% endif %}
       </li>
-      <span class="current">
+      <li class="current">
         <li class="page-item"></li>
         <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</a></li>
-        
-        
-    </span>
+      </li>
       <li class="page-item">
         {% if page_obj.has_next %}
           <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">&raquo;</a>
-      {% endif %}
-    
+        {% endif %}
       </li>
     </ul>
   </nav>
