--- a/book/templates/book/add_chapter.html
+++ b/book/templates/book/add_chapter.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="container">
   <header class="d-flex justify-content-center">
@@ -9,7 +9,7 @@
   <div class="d-flex justify-content-center">
     <form method="post" enctype="multipart/form-data" class="form-group">
         <div class="form-group">
-            {% csrf_token %} {{ form }}
+            {% csrf_token %} {{ form | crispy }}
         </div>
         <div class="col text-center">
           <button type="submit" class="btn btn-secondary">
