--- a/book/templates/book/book_details.html
+++ b/book/templates/book/book_details.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="container">
     <header>
@@ -10,7 +10,7 @@
     <div class="d-flex justify-content-center">
         <form method="post" enctype="multipart/form-data" id="bookCreationForm" class="form-group">
             <div class="form-group">
-                {% csrf_token %} {{ form }}
+                {% csrf_token %} {{ form | crispy }}
             </div>
             <div class="col text-center">
                 <button type="submit" class="btn btn-secondary">
