--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -2,26 +2,30 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock head_title %}
+{% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
 
 
-<div class="card text-center" id="logout">
-  <div class="card-body">
-    <h1>{% trans "Sign Out" %}</h1>
-
-    <p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-    <form method="post" action="{% url 'account_logout' %}">
-      {% csrf_token %}
-      {% if redirect_field_value %}
-      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-      {% endif %}
-      <button type="submit" class="btn btn-secondary">{% trans 'Sign Out' %}</button>
-    </form>
-  </div>
+<div class="container square-box d-flex justify-content-center align-items-center">
+  <div class="row">
+    <div class="card">
+      <div class="col-md-8 offset-md-2 text-center">
+        <h3>{% trans "Sign Out" %}</h3>
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
+    </div>
+    <div class="col-md-8 offset-md-2 text-center">
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+            <button class="btn btn-signup right btn-secondary" type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+    </div>
+    </div>
+    
+</div>
 </div>
 
-
-{% endblock content %}
+{% endblock %}
