--- a/templates/base.html
+++ b/templates/base.html
@@ -124,18 +124,12 @@
         <!-- Copyright -->
       </footer>
 
-      <!-- Javascript -->
-            <!-- Block for additional scripts -->
-        {% block additional_scripts %}
-        {% endblock %}
+      <!-- Javascript Bootstrap -->
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
-      <script src="{% static 'js/script.js' %}"></script>
-     
-
+  
       <!-- Jquery  -->
       <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
