--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,4 +1,6 @@
-
+* {
+    font-family: 'Montserrat';
+}
 /* ---------  For tags throughout HTML */
 
 a {
@@ -21,10 +23,12 @@ button {
 
 /* ----- Images in view_chapter.html -------*/
 
+/* Bookmark page image */
 #img-size-row {
     width: 100%;
-    height: 20vw;
+    height: 300px;
     object-fit: cover;
+    
 }
 
 .card  {
@@ -192,27 +196,71 @@ footer {
   display: block;
 }
 
+/* --------- Authentication */
 
-/* Log in page */
+/* For login, logout */
 
-#login {
-    width: 100%;
+.square-box {
+    max-width: 60vw;
+    /* min-height: 20vh;  */
+    margin-top: 60px;
+    padding: 0;
+}
+
+/* For sign-up */
+.square-sign-up {
+    max-width: 60vw;
+    margin-top: 0px;
+    padding: 0;
 }
 
 
-/* Sign up page */
-#signup {
-    left: 350px;
+/* ---------- -------- Media queries  */
+
+/* For screens up to 1030px */
+
+@media (max-width: 1030px) {
+
+    /* Index page */
+    .banner-text {
+        position: absolute;
+        top: 20%;
+        left: 30%;
+        padding: 100px 30px 100px 100px;
+    }
 }
 
-/* Sign out page */
+/* For screens up to 740px */
 
-#logout {
-    width: 500px;
-    left: 480px;
-    top: 120px;
+@media (max-width: 768px) {
+
+    /* login, logout */
+    .square-box .row {
+        width: 400px; 
+        margin: 30px; 
+    }
+
+    /* For sign-up */
+    .square-sign-up .row {
+        width: 400px; 
+        margin: 30px; 
+    }
 }
 
+/* For screens up to 540px */
+
+@media (max-width: 540px) {
+
+    /* login, logout */
+    .square-box .row {
+        width: 60vw; 
+    }
+
+    /* For sign-up */
+    .square-sign-up .row {
+        width: 60vw; 
+    }
+}
 
 /* ------------ Profile ------- */
 
@@ -229,20 +277,11 @@ footer {
 }
 
 
-/* @media (max-width: 550px) {
-    .custom-profile {
-        flex-basis: 50%;
-        width: 100%; 
-    }
+#testing {
+    float: left;
+}
 
-    .card-profile {
-        height: 75%;
-    }
-    
-}  */
-
-/* Ensures the card body doesn't stretch too much */
-.card-body {
-    overflow-y: auto;
-    height: 50%;
+#testing2 {
+ margin-right: 0;
+ margin-left: auto;
 }
