--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,7 @@
 
   <!-- Google Fonts CSS -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" />
-
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:wght@300;700&display=swap' rel='stylesheet'>
 
   <!-- Bootstrap Install CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,20 +31,19 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-center text-center">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{{ home_url }}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'browse' %}">Browse</a>
               </li>
-              <li class="nav-item dropdown text-end">
-                {% if user.is_authenticated %}
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  
+            </ul>
+            <ul class="navbar-nav d-flex justify-content-center text-center">
+              {% if user.is_authenticated %}
+              <li class="nav-item dropdown text-end ml-auto justify-content-end">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   {{ user }}
-                  {% endif %}
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="{% url 'profile' %}">View Profile</a></li>
@@ -54,21 +51,17 @@
                   <li><a class="dropdown-item" href="{% url 'bookmarked' %}">Bookmarks</a></li>
                 </ul>
               </li>
-              {% if user.is_authenticated %}
-              <li class="nav-item text-end">
-                <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_logout' %}">Logout</a>
+              <li class="nav-item text-end ml-auto justify-content-end">
+                <a class="nav-link" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
               </li>
-              {% else %}
-              <li class="nav-item text-end">
-                <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_signup' %}">Register</a>
+            {% else %}
+              <li class="nav-item text-end ml-auto justify-content-end">
+                <a class="nav-link" aria-current="page" href="{% url 'account_signup' %}">Register</a>
               </li>
-              <li class="nav-item text-end">
-                <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                  href="{% url 'account_login' %}">Login</a>
+              <li class="nav-item text-end ml-auto justify-content-end">
+                <a class="nav-link" aria-current="page" href="{% url 'account_login' %}">Login</a>
               </li>
-              {% endif %}
+            {% endif %}
             </ul>
           </div>
         </div>
